--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    .tabela-container {
+    border: 6px soild black;
+    margin: 20 px;
+    padding: 10 px;
+    }
+    
     <title>Formaty płyt głównych</title>
     <style>
         body {
