--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    .tabela-container {
-    border: 6px soild black;
-    margin: 20 px;
-    padding: 10 px;
-    }
-    
     <title>Formaty płyt głównych</title>
     <style>
         body {
@@ -19,19 +13,21 @@
             width: 100%;
             border-collapse: collapse;
             margin: 20px 0;
+            border: 3px solid #006aa5; /* Obramowanie z 3 liniami */
         }
         th, td {
-            border: 1px solid #000;
+            border: 1px solid #006aa5; /* Wewnętrzne cienkie obramowanie */
             text-align: center;
             padding: 8px;
         }
         th {
             background-color: #006aa5;
-            color: white;
+            color: #ccf1fc; /* Jasny niebieski tekst nagłówka */
             font-weight: bold;
         }
         td {
             background-color: #ccf1fc;
+            color: #004080; /* Ciemny niebieski tekst komórek */
         }
         .header {
             background-color: #008ecf;
