--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@ ZSE Gdańsk
 </p> <br>
 <p style="text-indent: 20px"> 	Cu sed fuisset assueverit, adhuc lobortis his in. Esse nemore oporteat vim no, pro sumo evertitur ea, no mei diam omnes rationibus. An mel movet persius inimicus, eros consul pri ea, labores conclusionemque ne vis. Id rebum reprehendunt vel, latine appareat postulant ei mei, duo ad tale epicurei oporteat. </p>
 <br>
- 
-<img scr="C:\Users\2F_1\Desktop/600" alt="Lorem Ipsum" >
+
+	<style>
+        img {
+            max-width: 600px;
+            max-height: 600px;
+            width: auto;
+            height: auto;
+        }
+		</style>
+	<img src="912-536x354.jpg" alt="Lorem ipsum">
+
  
     <!-- Lista uporządkowana z porami roku -->
 <ol type="I">
