--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@ ZSE Gdańsk
     <!-- Lista uporządkowana z porami roku -->
 <ol type="I">
 <li type="A">Jesień
-<ul>
+<ul type="I">
 <li>Październik</li>
 <li>Listopad</li>
 <li>Grudzień</li>
 </ul>
 </li>
 <li type="A" >Zima
-<ul>
+<ul type="I">
 <li>Grudzień</li>
 <li>Styczeń</li>
 <li>Luty</li>
