--- a/index.html
+++ b/index.html
@@ -39,21 +39,24 @@ ZSE Gdańsk
 
  
     <!-- Lista uporządkowana z porami roku -->
-<ol type="I">
-<li type="A">Jesień
 <ul type="I">
 <li>Październik</li>
 <li>Listopad</li>
 <li>Grudzień</li>
 </ul>
+
 </li>
-<li type="A" >Zima
+<ul type="A" >
+<li>Zima
+</ul>
 <ul type="I">
 <li>Grudzień</li>
 <li>Styczeń</li>
 <li>Luty</li>
 </ul>
-</li>
+	
+</body>
+</html>
 </ol>
 </body>
 </html>
