--- a/index.html
+++ b/index.html
@@ -38,22 +38,23 @@ ZSE Gdańsk
 	<img src="912-536x354.jpg" alt="Lorem ipsum">
 
  
-    <!-- Lista uporządkowana z porami roku -->
-<ul type="I">
+  <!-- Lista uporządkowana z porami roku -->
+<ol type="I">
+<li type="A">Jesień
+<ul>
 <li>Październik</li>
 <li>Listopad</li>
 <li>Grudzień</li>
 </ul>
-
 </li>
-<ul type="A" >
-<li>Zima
-</ul>
-<ul type="I">
+<li type="A" >Zima
+<ul>
 <li>Grudzień</li>
 <li>Styczeń</li>
 <li>Luty</li>
 </ul>
+</li>
+</ol>
 	
 </body>
 </html>
