--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@ ZSE Gdańsk
 </li>
 
 	
+<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam bibendum augue ligula, vehicula mattis massa consectetur eu. Donec dignissim fermentum luctus. Praesent laoreet pretium nibh, ac pretium eros accumsan aliquet. Donec et risus urna. Integer sed magna eleifend, consectetur sem sit amet, lacinia arcu. Curabitur ut sem ipsum. Donec ac mi eget risus varius elementum. Aenean iaculis enim sed mollis pretium. Curabitur congue metus vitae urna volutpat, sed scelerisque diam tincidunt. Nullam eu nunc eget nisi pulvinar consectetur. Aenean turpis velit, ullamcorper non suscipit ullamcorper, varius et mi. Nulla nec consequat turpis.</h1>
+<br>	
+	<img src="wit 2.jpg" center="left"> <br>
+<h2>Lorem Ipsum (Tahoma) Drugi akapit: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam bibendum augue ligula, vehicula mattis massa consectetur eu. Donec dignissim fermentum luctus. Praesent laoreet pretium nibh, ac pretium eros accumsan aliquet. Donec et risus urna. Integer sed magna eleifend, consectetur sem sit amet, lacinia arcu. Curabitur ut sem ipsum. Donec ac mi eget risus varius elementum. Aenean iaculis enim sed mollis pretium. Curabitur congue metus vitae urna volutpat, sed scelerisque diam tincidunt. Nullam eu nunc eget nisi pulvinar consectetur. Aenean turpis velit, ullamcorper non suscipit ullamcorper, varius et mi. Nulla nec consequat turpis.</h2>
+<br>
+<img src="wit 2.jpg" center="right"> <br>
+
+<h3>Lorem Ipsum (Impact) Trzeci akapit: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam bibendum augue ligula, vehicula mattis massa consectetur eu. Donec dignissim fermentum luctus. Praesent laoreet pretium nibh, ac pretium eros accumsan aliquet. Donec et risus urna. Integer sed magna eleifend, consectetur sem sit amet, lacinia arcu. Curabitur ut sem ipsum. Donec ac mi eget risus varius elementum. Aenean iaculis enim sed mollis pretium. Curabitur congue metus vitae urna volutpat, sed scelerisque diam tincidunt. Nullam eu nunc eget nisi pulvinar consectetur. Aenean turpis velit, ullamcorper non suscipit ullamcorper, varius et mi. Nulla nec consequat turpis.</h3>
+<br>
+
+<img src="wit 2.jpg" center="center"> <br>
+	
 </body>
 </html>
 </ol>
