--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ ZSE Gdańsk
 <br>
 
  <img src="wit 2.jpg" alt="Obraz do środka" class="center">
+	<img src="https://picsum.photos/200/300?random=1">
 </body>
 	
 </body>
