--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ ZSE Gdańsk
         }
 		</style>
 	<img src="912-536x354.jpg" alt="Lorem ipsum">
-
+	<img src="https://picsum.photos/600?random=1">
  
   <!-- Lista uporządkowana z porami roku -->
 
@@ -101,7 +101,7 @@ ZSE Gdańsk
 <br>
 
  <img src="wit 2.jpg" alt="Obraz do środka" class="center">
-	<img src="https://picsum.photos/200/300?random=1">
+	
 </body>
 	
 </body>
